# gameoflife

./: README.md
src/: CMakeLists.txt  main.c
